3.0.0-beta2 (2013-06-??)
	* Fixed: Corrected includes.php file.

3.0.0-beta1 (2013-06-07)
	* Added: jsonSerialize() for creating jCal and jCard documents.
	* Added: helper method to parse vCard dates and times.
	* Added: Specialized classes for FLOAT, LANGUAGE-TAG, TIME, TIMESTAMP,
	  DATE-AND-OR-TIME, CAL-ADDRESS, UNKNOWN and UTC-OFFSET properties.
	* Removed: CommaSeparatedText property. Now included into Text.
	* Fixed: Multiple parameters with the same name are now correctly encoded.
	* Fixed: Parameter values containing a comma are now enclosed in
	  double-quotes.
	* Fixed: Iterating parameter values should now fully work as expected.
	* Fixed: Support for vCard 2.1 nameless parameters.
	* Changed: $valueMap, $componentMap and $propertyMap now all use
	  fully-qualified class names, so they are actually overridable.
	* Fixed: Updating DATE-TIME to DATE values now behaves like expected.

3.0.0-alpha4 (2013-05-31)
	* Added: It's now possible to send parser options to the splitter classes.
	* Added: A few tweaks to improve component and property creation.

3.0.0-alpha3 (2013-05-13)
	* Changed: propertyMap, valueMap and componentMap are now static
	  properties.
	* Changed: Component::remove() will throw an exception when trying to
	  a node that's not a child of said component.
	* Added: Splitter objects are now faster, line numbers are accurately
	  reported and use less memory.
	* Added: MimeDir parser can now continue parsing with the same stream
	  buffer.
	* Fixed: vobjectvalidate.php is operational again.
	* Fixed: \r is properly stripped in text values.
	* Fixed: QUOTED-PRINTABLE is now correctly encoded as well as encoded, for
	  vCards 2.1.
	* Fixed: Parser assumes vCard 2.1, if no version was supplied.

3.0.0-alpha2 (2013-05-22)
	* Fixed: vCard URL properties were referencing a non-existant class.

3.0.0-alpha1 (2013-05-21)
	* Fixed: Now correctly dealing with escaping of properties. This solves